<resources>
    <string name="app_name">otams</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="program_of_study">Program of Study</string>
    <string name="register">Register</string>
    <string name="welcome_role">Welcome, %1$s!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>

</resources>