<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/loginEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColorHint="@android:color/black"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/loginPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@android:color/black"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
